--- a/acp/css/styles_dark.css
+++ b/acp/css/styles_dark.css
@@ -503,28 +503,6 @@ div#bigHeader {
   border-top-left-radius: 5px;
   border: 1px solid #000000;
 }
-/*
-#liveBox {
-	width: 200px;
-	margin-top: 15px;
-	padding: 5px 5px 5px 15px;
-}
-
-#liveBox a {
-	color: #666;
-	display: block;
-	padding: 3px;
-}
-
-#liveBox a:hover {
-	color: #428bca;
-}
-
-#liveBox hr {
-	border-bottom: 1px solid #111;
-	margin: 3px;
-}
-*/
 div#wrapper {
   float: right;
   width: 100%;
@@ -547,14 +525,6 @@ div#container {
   margin: 0;
   padding: 10px 15px;
 }
-/*
-div#container h3:first-of-type {
- line-height: 22px;
- font-size: 18px;
- color: #666;
- margin-top: 0;
-}
-*/
 hr.shadow {
   padding: 0;
   border: 0;
@@ -785,31 +755,6 @@ div.header-bc span:first-child {
   padding-left: 10px;
   border-top-left-radius: 5px;
 }
-/* listings */
-/*
-div#listItems {
-	padding: 2px;
-	border-bottom: 1px solid #fff;
-}
-
-div#listItems:hover {
-	background: #fff;
-}
-*/
-/*
-span#w100, span#w150, span#w200 {
-	display: block;
-	float: left;
-	padding: 2px 4px;
-	border-right: 1px solid #fff;
-
-}
-*/
-/* not in use
-span#w100 { width: 100px; }
-span#w150 { width: 150px; }
-span#w200 { width: 200px; }
-*/
 .clear,
 #clear {
   clear: both;
@@ -1261,14 +1206,15 @@ img.avatar {
 }
 .charleft {
   width: 200px;
-  background: #252525;
+  padding-top: 2px;
 }
 .charleft span {
   display: table-cell;
   min-width: 100px;
   text-align: center;
-  background: #111;
+  background: #181818;
   border: 1px solid #252525;
+  color: #ccc;
 }
 .bootstrap-tagsinput {
   /*background-color: @brand_color;*/
